Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -379,9 +379,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [],
+         "type": "scatter",
+         "uid": "e4f53ce8-0709-11e9-a869-53029a6ccf76",
+         "x": [],
+         "y": []
+        },
+        {
+         "text": [],
+         "type": "scatter",
+         "uid": "e4f540e4-0709-11e9-a869-53029a6ccf76",
+         "x": [],
+         "y": []
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"61864678-8fe5-41c7-8e51-7e5506ee92e7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"61864678-8fe5-41c7-8e51-7e5506ee92e7\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"e4fd7f3e-0709-11e9-a869-53029a6ccf76\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"e4fd81be-0709-11e9-a869-53029a6ccf76\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"61864678-8fe5-41c7-8e51-7e5506ee92e7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"61864678-8fe5-41c7-8e51-7e5506ee92e7\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"e4fd7f3e-0709-11e9-a869-53029a6ccf76\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"e4fd81be-0709-11e9-a869-53029a6ccf76\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
    ]
